[package]
name = "quick_dock_llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hora = "0.1.1"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
